--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: lubridate,
-    timeDate
+    timeDate,
+    tidyr,
+    dplyr,
+    stats
 Suggests: plumber,
     nycflights13
